tests/compilation_tests/records/struct_with_improper_types.stderr
error: types with lifetimes or generics aren't allowed
 --> $DIR/struct_with_improper_types.rs:7:12
  |
7 |     pub a: Box<i32>,
  |            ^^^

error: types with lifetimes or generics aren't allowed
  --> $DIR/struct_with_improper_types.rs:12:21
   |
12 |     pub a: std::rc::Rc<i32>,
   |                     ^^

error: types with lifetimes or generics aren't allowed
  --> $DIR/struct_with_improper_types.rs:17:30
   |
17 |     pub a: std::collections::HashMap<i32, String>,
   |                              ^^^^^^^
